<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pixlatr</string>
    <string name="action_settings">Settings</string>
    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>
    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="pixlatricon">contentDescription = picture</string>
    <string name="rgb_hint">#RRGGBB</string>

</resources>
